# python_task_client

./: next.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
conn/: Cargo.toml
conn/src/: base.rs  inner_udp.rs  inner_websocket.rs  lib.rs  main.rs
crate_module/conn/src/: inner_tcp.rs  inner_websocket.rs  main.rs
crate_module/proto/src/: lib.rs
proto/: Cargo.toml
proto/src/: lib.rs  message.rs
public/lottie/: local.json
src/: App.less  App.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: client copy.rs  client.rs  command.rs  lib.rs  main.rs  promise.rs  setup.rs
src-tauri/src/client/: c_macro.rs  client_manage.rs  error.rs  utils.rs  w_client.rs
src-tauri/src/modules/proto/src/: lib.rs
src-tauri/src/plugin/: connect.rs
src/api/: common.ts  common.type.ts  script.ts  script.type.ts  user-center.ts  user-center.type.ts
src/api/lib/: index.ts  type.ts
src/app/: base.ts  connect.ts  protocol.ts  store.ts  stroage.ts  websocket.ts
src/app/service/: connect.ts  task.ts  websocket.ts  wechat.ts
src/app/utils/: index.ts
src/components/AddTask/: index.tsx
src/components/AddWxName/: index.tsx
src/components/Home/: index.css  index.tsx  mockData.ts
src/components/Iconfont/: index.tsx
src/components/List/: index.css  index.tsx
src/components/Loading/: index.tsx
src/components/Message/: index.tsx
src/components/NotFound/: index.tsx
src/config/: index.ts
src/hooks/: useAppContent.tsx
src/pages/: _app.tsx  connect.tsx  index.css  index.tsx  networkerror.tsx  task.tsx
src/pages/Connect/: index.tsx
src/router/: index.tsx
src/utils/: index.ts  store.ts  utils.ts
(+35 files in other folders)
